<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/principal"
    android:layout_height="match_parent"
    tools:context=".Control.Fragments.RecoverFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="354dp"
        android:layout_height="624dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="54dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:text="@string/cambiar"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/correo">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/button_change"
            android:layout_width="230dp"
            android:layout_height="100dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="380dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="@string/cambiar_contr" />






    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>